# librko

./: .ci.all  .cvsignore  .gitignore  .sed  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.inc  NEWS  aclocal.m4  ansi_seq.c  avec.c  clocker.c  coexec.c  config.h.in  configure  configure.ac  copyright2  cvs2cl.pl  dirtree.c  gcd.c  invoke.c  iprime.c  isqrt.c  list.c  memdbg.c  memdebug.c  rkoerror.c  setupmake  spawn.c  uvec.c  version.c  version.c.in  what2man  whatis.librko
FTP/: README
apps/: Makefile.memdebug  Tmpl.man  color.c  color.man  istext.man  istextmain.c  mexpn.c  mexpn.man  mexpn.new.c  netup.c  netup.man  randomize.tgz  reverse.tgz  wf.c  wf.man  whatis.all
apps/reverse/: Makefile  README  Reverse.man  reverse.c  reverse.doc
apps/reverse/test/: test.csh  ttt2  ttt3  ttt4
avec/: avec_.c  avec_.h  avec_accessor.c  avec_alloc.c  avec_close.c  avec_ctor.c  avec_dealloc.c  avec_decrease.c  avec_delete.c  avec_dtor.c  avec_increase.c  avec_init.c  avec_insert.c  avec_key_sort.c  avec_key_walk.c  avec_key_walk_r.c  avec_keys.c  avec_lookup.c  avec_remove.c  avec_resize.c  avec_resize_percentage.c  avec_set_fns.c  avec_values.c  avec_walk.c  avec_walk_r.c
coexec/: invoke.c  postfilter.c  postprocess.c  prefile.c  prefilter.c  preprocess.c  spawn.c  spawn3.c
config/: librko.m4  mkinstalldirs
docs/: Librko.man  Tmpl.man  ansi_seq.man  avec.man  clocker.man  coexec.man  dirtree.man  divdiff.man  filter.man  foptim.man  fzeroin.man  gcd.man  gethostbyX.man  invoke.man  iprime.man  isqrt.man  istext.man  key_value.man  list.man  macrosub.man  memdbg.man  memdebug.man  metropolis.man  nameread.man  prefile.man  rkoerror.man  spawn.man  spawn3.man  strchop.man  strdbecpy.man  strmalloc.man  strmem.man  tcp_connect.man  timedfgets.man  urand.man  uvec.man  wcstrcmp.man
etc/: cpset  mkshar  yy-sed
igcd/: chgcd.c  hgcd.c  igcd.c  igcd_.h  lgcd.c  scgcd.c  ucgcd.c  ugcd.c  uhgcd.c  ulgcd.c
include/: ansi_seq.h  avec.h  clocker.h  coexec.h  igcd.h  iprime.h  isqrt.h  istext.h  librko.h  list.h  memdebug.h  numfns.h  rkoerror.h  strchop.h  strfns.h  strmalloc.h  urand.h  uvec.h
include/old/: ansi_seq.h  divdiff.h  gethostbyX.h  memory.h  strmem.h  tcp_connect.h
iprime/: chprime.c  hprime.c  iprime.c  iprime_.h  iprime_lut.c  lprime.c  scprime.c  ucprime.c  uhprime.c  uiprime.c  ulprime.c
isqrt/: chsqrt.c  hsqrt.c  isqrt.c  isqrt_.h  isqrt_lut.c  lsqrt.c  scsqrt.c  ucsrt.c  uhsqrt.c  uisqrt.c  ulsqrt.c
list/: list_.c  list_.h  list_append.c  list_ctor.c  list_delete.c  list_dtor.c  list_exists.c  list_first.c  list_insert.c  list_last.c  list_number.c  list_pop.c  list_push.c  list_qsort.c  list_shift.c  list_sizeof.c  list_swap.c  list_unshift.c
metropolis/: .sed  Makefile  README  idxperm.c  idxrevr.c  idxswap.c  metropolis.c  metropolis.h  metropolis.old.h  metropolis.txt  ranindex.c  ranperm.c  ranswap.c  trun.csh
minish/: .cvsignore  FLEX  Makefile  fdlist.c  lextest.cmp  minish-lex.c  minish-tab.h  minish-yacc.c  minish.c  minish.h  minish.lex  minish.txt  minish.yacc  mshexec.c  tminish.c  usched.y
minish/cmp/: exectest.cmp  shtest.cmp  yacctest.cmp
minish/fdtest/: .cvsignore  cmp.fdtest.3inout  cmp.fdtest.4out  cmp.fdtest.out  cmp.fdtest.testout  fdtest.sh  init.fdtest.4out
minish/mtest/: .cvsignore  right.c  rsignal.c  wrong.c
minish/tmp/: red.m4  xxx
misc/: strnchop.c
netfns/: gethostbyX.c  tcp_connect.c
numfns/: divdiff.c  foptim.c  fzeroin.c
strfns/: istext.c  key_value.c  macrosub.c  nameread.c  strchop.c  strdbecpy.c  strmalloc.c  strmem.c  timedfgets.c  wcstrcmp.c
tests/: .cvsignore  Makefile  Makefile.am  Makefile.in  birdy  birdy.c  doggy  doggy.c  kitty  kitty.c  nnn.c  postfilter.c  prefilter.c  tansi_seq.c  tavec.c  tclocker.c  tdir.tar  tdirtree.c  testtext  testtext3.Z  testtext4.z  tfilter.c  tfoptim.c  tfzeroin.c  tigcd.c  tinvoke.c  tiprime.c  tisqrt.c  tkey_value.c  tlist.c  tmacrosub.c  tmemdbg.c  tmemdebug.c  tnameread.c  tpopen.c  tprefile.c  tspawn.c  tspawn3.c  tstrchop.c  tstrdbecpy.c  (+9 more)
urand/: .cvsignore  .opt  Makefile  all.csh  clean  script.csh  tmadd.c  tmdiv.c  tmsub.c  tovfadd.c  urand.c  urand.c,v  urand.h  urand.in  urand.old.h  urand_.c
uvec/: str2uvec.c  uvec2str.c  uvec2uvec.c  uvec_accessor.c  uvec_add.c  uvec_alloc.c  uvec_close.c  uvec_copy.c  uvec_copy_str.c  uvec_copy_vec.c  uvec_count_tok.c  uvec_ctor.c  uvec_dealloc.c  uvec_dtor.c  uvec_init.c  uvec_insert.c  uvec_push.c  uvec_randomize.c  uvec_reverse.c  uvec_shift.c  uvec_sort.c  uvec_strfns.c  uvec_strfree.c  vec2uvec.c
